--- a/src/pages/blog/2021-01-08-asd.md
+++ b/src/pages/blog/2021-01-08-asd.md
@@ -4,7 +4,7 @@ title: asd
 date: 2021-01-08T21:35:34.846Z
 description: asd
 featuredpost: true
-featuredimage: /img/blog-index.jpg
+featuredimage: /img/flavor_wheel.jpg
 tags:
   - asd
 ---
