Update Blog “2021-01-08-asd”

--- a/src/pages/blog/2021-01-08-asd.md
+++ b/src/pages/blog/2021-01-08-asd.md
@@ -3,7 +3,7 @@ templateKey: blog-post
 title: asd
 date: 2021-01-08T21:35:34.846Z
 description: asd
-featuredpost: true
+featuredpost: false
 featuredimage: /img/flavor_wheel.jpg
 tags:
   - asd
